# complex_number_sequence

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
etc/: complex_config_case_1A.yml  complex_config_case_1B.yml  complex_config_case_2A.yml  complex_config_case_2B.yml  complex_config_case_3A.yml  mandelbrot_config.yml  mandelbrot_config_case_1.yml  mandelbrot_config_case_2.yml  mandelbrot_config_case_2A.yml  mandelbrot_config_case_2B.yml  mandelbrot_config_case_3.yml
include/complex/: complex.hpp  mandelbrot_utils.hpp
include/complex_lib/: calculation_runner.hpp  complex.hpp  config_reader.hpp
scripts/: plot_cplx_seq.py  plot_mandelbrot.py  plot_result.gp
src/: complex.cpp  complex_seq_utils.cpp  main.cpp  mandelbrot_utils.cpp
src/complex_lib/: calculation_runner.cpp  complex.cpp  config_reader.cpp
